# 2025-haskell-playground-m323-in23c-Trummler12

./: .ghci  .ghci-all  .ghci-geometry  .ghci-numlang  .ghci-utility  DEVELOPER.md  GHCiPrint.hs  PLANUNG.md  README.md  TASK_DOCS.md  TASK_PLAN.md  TEST-OUTPUT.txt  WRAPPER_ANALYSIS.md  cabal.project  ghci  ghci.ps1  hs  hs.ps1  local-tree.ps1  local-tree.txt  numlang.hs  simple.hs  vector.hs
demos/: demos.cabal
demos/app/: demo.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/multi-out-13764/: geometry-0.1.0.0-inplace  numlang-0.1.0.0-inplace
dist-newstyle/multi-out-13764/paths/: geometry-0.1.0.0-inplace  numlang-0.1.0.0-inplace
dist-newstyle/multi-out-20908/: geometry-0.1.0.0-inplace  numlang-0.1.0.0-inplace
dist-newstyle/multi-out-20908/paths/: numlang-0.1.0.0-inplace
dist-newstyle/packagedb/ghc-9.6.7/: geometry-0.1.0.0-inplace.conf  numlang-0.1.0.0-inplace.conf  package.cache  utility-0.1.0.0-inplace.conf
docs/: CONFIGURATION.md
geometry/: geometry.cabal
geometry/src/Geometry/: FilterByOrthants.hs  Vector.hs
geometry/src/Geometry/Shapes/ThreeD/: Cube.hs  Sphere.hs
geometry/src/Geometry/Shapes/TwoD/: Circle.hs  Square.hs  Triangle.hs
math/: math.cabal
math/src/Math/: Series.hs  TO-DO.md
numlang/: numlang.cabal
numlang/src/NumLang/: NumLang.hs
startup/: .gitignore  startup.cabal
startup/src/Startup/: .gitignore  Startup.hs
utility/: utility.cabal
utility/src/Utility/: GHCiPrint.hs
