cabal-version:      >=1.24
name:               demos
version:            0.1.0.0
build-type:         Simple

executable demo
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          demo.hs
  ghc-options:      -Wall
  build-depends:    base
                  , geometry
                  , numlang
                  , utility
