cabal-version:      1.24
name:               math
version:            0.1.0.0
build-type:         Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Math.Series
  build-depends:    base >=4.14 && <5
                  , containers
                  , time
  ghc-options:      -Wall
  default-extensions: OverloadedStrings
                    , MultiParamTypeClasses
                    , FlexibleInstances
                    , TypeFamilies
                    , DataKinds
                    , TypeOperators
                    , UndecidableInstances
                    , GADTs
