cabal-version:      >=1.24
name:               numlang
version:            0.1.0.0
build-type:         Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  NumLang.NumLang
  build-depends:    base >=4.14 && <5
                  , text
                  , containers
                  , time
  ghc-options:      -Wall
  default-extensions: FlexibleInstances
                    , TypeSynonymInstances
