cabal-version:      1.24
name:               startup
version:            0.1.0.0
build-type:         Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Startup.Startup
  build-depends:    base >=4.14 && <5
                  , geometry
                  , math
                  , utility
                  , numlang
  ghc-options:      -Wall
