cabal-version:      2.4
name:               utility
version:            0.1.0.0
synopsis:           Utility functions for M323-Haskell
license:            NONE
author:             M323 Student
maintainer:         student@example.com
build-type:         Simple

common common-opts
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:    base >=4.14 && <5

library
  import:           common-opts
  hs-source-dirs:   src
  exposed-modules:
      Utility.GHCiPrint
  build-depends:
      text
    , bytestring
