cabal-version:      1.24
name:               utility
version:            0.1.0.0
build-type:         Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Utility.GHCiPrint
  build-depends:    base >=4.14 && <5
                  , text
                  , bytestring
  ghc-options:      -Wall
  default-extensions: OverloadedStrings
                    , RankNTypes
